error.txt
Traceback (most recent call last):
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/bot.py", line 917, in _load_from_module_spec
    spec.loader.exec_module(lib)  # type: ignore
  File "<frozen importlib._bootstrap_external>", line 851, in exec_module
  File "<frozen importlib._bootstrap_external>", line 988, in get_code
  File "<frozen importlib._bootstrap_external>", line 918, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/Users/andrewchen/PycharmProjects/scibowlbot/commands/misc.py", line 139
    await interaction.response.edit_message(embed=self.help.get_cog_embed(cog, name))
    ^
SyntaxError: 'await' outside async function

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/core.py", line 200, in wrapped
    ret = await coro(*args, **kwargs)
  File "/Users/andrewchen/PycharmProjects/scibowlbot/commands/dev.py", line 71, in _reload
    await ctx.bot.reload_extension(command_name)
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/bot.py", line 1097, in reload_extension
    await self.load_extension(name)
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/bot.py", line 995, in load_extension
    await self._load_from_module_spec(spec, name)
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/bot.py", line 920, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'commands.misc' raised an error: SyntaxError: 'await' outside async function (misc.py, line 139)

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/bot.py", line 1330, in invoke
    await ctx.command.invoke(ctx)
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/core.py", line 995, in invoke
    await injected(*ctx.args, **ctx.kwargs)  # type: ignore
  File "/Users/andrewchen/Library/Python/3.9/lib/python/site-packages/discord/ext/commands/core.py", line 209, in wrapped
    raise CommandInvokeError(exc) from exc
discord.ext.commands.errors.CommandInvokeError: Command raised an exception: ExtensionFailed: Extension 'commands.misc' raised an error: SyntaxError: 'await' outside async function (misc.py, line 139)
